src/test/ui/drop/repeat-drop-2.stderr
error[E0382]: use of moved value: `foo`
  --> $DIR/repeat-drop-2.rs:4:17
   |
LL |     let foo = String::new();
   |         --- move occurs because `foo` has type `String`, which does not implement the `Copy` trait
LL |     let _bar = foo;
   |                --- value moved here
LL |     let _baz = [foo; 0];
   |                 ^^^ value used here after move

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/repeat-drop-2.rs:7:25
   |
LL | const _: [String; 0] = [String::new(); 0];
   |                        -^^^^^^^^^^^^^----
   |                        ||
   |                        |constants cannot evaluate destructors
   |                        value is dropped here

error[E0381]: use of possibly-uninitialized variable: `x`
  --> $DIR/repeat-drop-2.rs:12:14
   |
LL |     let _ = [x; 0];
   |              ^ use of possibly-uninitialized `x`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0381, E0382, E0493.
For more information about an error, try `rustc --explain E0381`.
